--- a/widgets/Header/index.module.css
+++ b/widgets/Header/index.module.css
@@ -38,7 +38,7 @@
     font-weight: 600;
 }
 
-.headerLogo svg{
+.headerLogo img {
     width: 41px;
     height: 33px;
     flex-shrink: 0;
@@ -49,7 +49,7 @@
         font-size: 1.8rem;
     }
 
-    .headerLogo svg{
+    .headerLogo img {
         width: 30px;
         height: 25px;
     }
@@ -145,32 +145,3 @@
     flex-shrink: 0;
 }
 
-.headerConnect{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 1.2rem 1.6rem;
-    background: rgba(255, 255, 255, .3);
-    border: 1px solid #A0A3C1;
-    border-radius: 12px;
-    font-size: 1.8rem;
-    font-weight: 500;
-}
-
-.headerConnect:hover{
-    color: #7323B8;
-    border: 1px solid #7323B8;
-}
-
-.headerConnect svg{
-    width: 18px;
-    height: 18px;
-    flex-shrink: 0;
-}
-
-@media (max-width: 998px) {
-    .headerConnect{
-        padding: 0.8rem;
-        font-size: 1.4rem;
-    }
-}
